--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -4,12 +4,13 @@ driver:
 
 provisioner:
   name: chef_solo
+  data_bags_path: ./test/data_bags
 
 platforms:
   - name: ubuntu-14.04
-  - name: centos-7.1
+  # - name: centos-6.7
 
 suites:
   - name: default
-    run_list:
+    run_list: ["recipe[lamp-server]"]
     attributes:
